test/should-pass/fail/no-such-method-exception/exe.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass sequence;

int-t main()
{
  object-t o = make(object::klass);
  dk::add-last(o, o);
  return(0);
}
